# faker_data_pipeline

./: .gitignore  Dockerfile  Makefile  README.md  dbt_project.yml  persons.duckdb  pyproject.toml
.dbt/: .user.yml  profiles.yml
.github/workflows/: faker_data_pipeline.yml
data_pipeline/: data_anonymization.py  data_ingestion.py  data_storage.py  models.py  report_generation.py  utils.py
data_pipeline/sql/: create_tables.sql  insert_raw_data.sql
data_pipeline/tests/: test_data_ingestion.py  test_report_generation.py
data_pipeline/utils/: expectations.py  metrics.py  quality.py  read_sql.py
data_pipeline_dbt/models/: sources.yml
data_pipeline_dbt/models/marts/: persons_age_groups.sql  persons_email_usage.sql  persons_location.sql
data_pipeline_dbt/models/staging/: stg_persons.sql  stg_persons.yml
data_pipeline_dbt/tests/unit/: test_stg_persons_age_groups.yml
scripts/: run_pipeline.sh
sql/: create_tables.sql  query_over_60_gmail.sql  query_percentage_germany_gmail.sql  query_top_countries_gmail.sql
tests/: conftest.py  test_data_anonymization.py  test_data_ingestion.py  test_data_storage.py  test_report_generation.py
